k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motd-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd-container
        image: nginx
        volumeMounts:
        - name: motd-config
          mountPath: /etc/nginx/templates/default.conf.template
          subPath: default.conf.template
      volumes:
      - name: motd-config
        configMap:
          name: motd-configmap
