k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: motd-svc
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5555
  type: ClusterIP
